--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-feature
         android:name="android.hardware.telephony"
         android:required="false" />
+
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
 
@@ -19,16 +21,21 @@
         android:theme="@style/Theme.AppChachi"
         tools:targetApi="31">
         <activity
-            android:name=".CalendarActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ChachiGroupActivity"
-            android:exported="false" />
-        <activity
             android:name=".MainActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".FireFragment"
             android:exported="false" />
         <activity
-            android:name=".MessagesActivity"
+            android:name=".MapFragment"
+            android:exported="false" />
+        <activity
+            android:name=".SecurityFragment"
+            android:exported="true" />
+        <activity
+            android:name=".MedicFragment"
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
@@ -39,6 +46,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
