--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,8 @@
         android:theme="@style/Theme.AppChachi"
         tools:targetApi="31">
         <activity
-            android:name=".EditActivity"
-            android:exported="false" />
-        <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".FireFragment"
             android:exported="false" />
@@ -47,6 +44,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver
+            android:name=".AnnouncementReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.example.appchachi.ANNOUNCEMENT_ACTION" />
+            </intent-filter>
+        </receiver>
     </application>
-
 </manifest>
