--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
@@ -56,11 +55,18 @@
             android:theme="@style/Theme.Design.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        <!-- Declare AnnouncementService -->
+        <service
+            android:name=".Announcements.AnnouncementService"
+            android:enabled="true"
+            android:exported="false" />
+
+        <!-- Remove the Firebase Messaging Service if not in use -->
+        <!--
         <service
             android:name=".Announcements.MyFirebaseMessagingService"
             android:exported="true"
@@ -69,7 +75,9 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+        -->
 
+        <!-- Declare the AnnouncementReceiver if needed for broadcast intents -->
         <receiver
             android:name=".Announcements.AnnouncementReceiver"
             android:exported="false">
