--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
 
     <application
         android:allowBackup="true"
@@ -39,9 +41,6 @@
             android:exported="true" />
         <activity
             android:name=".Fragments.FireFragment"
-            android:exported="false" />
-        <activity
-            android:name=".Fragments.MapFragment"
             android:exported="false" />
         <activity
             android:name=".Fragments.SecurityFragment"
